Fix layout on mobile

--- a/resources/sass/v2/organisms/_page.form.scss
+++ b/resources/sass/v2/organisms/_page.form.scss
@@ -7,12 +7,19 @@
     @media screen and (max-width: $screen-l) {
         grid-template-columns: 40% 2fr;
     }
+    @media screen and (max-width: $screen-m) {
+        grid-template-columns: 100%;
+    }
 
     section.overview {
         background-color: #525861;
         padding: 4em 3em 4em 6em;
         color: #fff;
         line-height: 2em;
+
+        @media screen and (max-width: $screen-m) {
+            padding: 3em 2em;
+        }
 
         h1 {
             font-size: 3em;
@@ -38,6 +45,10 @@
     section.contents {
         padding: 4em 6em 4em 3em;
         line-height: 2em;
+
+        @media screen and (max-width: $screen-m) {
+            padding: 3em 2em;
+        }
 
         h2 {
             font-size: 1.5em;
